Fix header spacing, fix tabs

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,16 +1,19 @@
 header {
-	&.header {
-		background-color: $nyu_purple;
-	}
-	div.logo {
-		margin: 0;
-		padding: 39px 0;
-		display: block;
-		a {
-			display: block;
-		}
-	}
-	& > div {
-		margin: 0 auto;
-	}
+  .container {
+    padding: 0;
+  }
+  &.header {
+    background-color: $nyu_purple;
+  }
+  div.logo {
+    margin: 0;
+    padding: 39px 0;
+    display: block;
+    a {
+      display: block;
+    }
+  }
+  & > div {
+    margin: 0 auto;
+  }
 }
